--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Tim's Blog
+title: Within Epsilon of Nonmediocrity
 email: tmclough98@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  This is where writing a GUI interface using visual basic to track the killer's
-  IP address happens.
+  It just works
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
